<resources>
    <string name="app_name">JunkfoodTracker</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="Search">Search</string>
    <string name="Restaurants">Restaurants</string>
    <string name="Language">Language</string>
    <string name="Dutch">Dutch</string>
    <string name="English">English</string>
    <string name="French">French</string>
    <string name="Account">Account</string>
    <string name="User">User</string>
    <string name="Signout">Sign out</string>
    <string name="Radius">Radius</string>
    <string name="All">All</string>
    <string name="Information">Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="AmountOfStars">Amount of stars</string>
    <string name="review">Review</string>
    <string name="Online">Online</string>
    <string name="Local">Local</string>
    <string name="Datasource">Data source</string>
    <string name="WriteAReview">Write a review</string>
    <string name="Restaurant">Restaurants</string>
</resources>
